# KRiK

./: .gitignore  README.md  docker-compose.yml
client/: index.html  package-lock.json  package.json
corporate-portal-desktop/: .gitignore  electron-builder.yml  index.html  package.json  tsconfig.json  vite.config.ts
cpp-migration-plan/: MIGRATION_PLAN.md  REPORT.md
cpp-migration-plan/cpp-portal/: CMakeLists.txt  build.bat
cpp-migration-plan/cpp-portal/resources/: portal.qss  resources.qrc
cpp-migration-plan/cpp-portal/src/: main.cpp
cpp-migration-plan/cpp-portal/src/core/: Application.cpp  Application.h  Config.cpp  Config.h  DatabaseManager.cpp  DatabaseManager.h  EventBus.cpp  EventBus.h  Logger.cpp  Logger.h
cpp-migration-plan/cpp-portal/src/models/: UserModel.cpp  UserModel.h
cpp-migration-plan/cpp-portal/src/network/: AuthInterceptor.cpp  AuthInterceptor.h  HttpClient.cpp  HttpClient.h  NotificationManager.cpp  NotificationManager.h  SocketManager.cpp  SocketManager.h
cpp-migration-plan/cpp-portal/src/ui/: LogWindow.cpp  LogWindow.h  MainWindow.cpp  MainWindow.h
cpp-migration-plan/cpp-portal/src/ui/components/: ClickableFrame.cpp  ClickableFrame.h  HeaderWidget.cpp  HeaderWidget.h  OfflineBanner.cpp  OfflineBanner.h  SidebarWidget.cpp  SidebarWidget.h  TitleBar.cpp  TitleBar.h
cpp-migration-plan/cpp-portal/src/ui/pages/: AdminPage.cpp  AdminPage.h  ArchivePage.cpp  ArchivePage.h  CinemaPage.cpp  CinemaPage.h  ConstitutionPage.cpp  ConstitutionPage.h  DashboardPage.cpp  DashboardPage.h  EventsPage.cpp  EventsPage.h  FeedPage.cpp  FeedPage.h  ForumPage.cpp  ForumPage.h  LeaderboardPage.cpp  LeaderboardPage.h  LibraryPage.cpp  LibraryPage.h  LoginPage.cpp  LoginPage.h  LogsPage.cpp  LogsPage.h  MemesPage.cpp  MemesPage.h  MessagesPage.cpp  MessagesPage.h  ProfilePage.cpp  ProfilePage.h  SearchPage.cpp  SearchPage.h  SoftwarePage.cpp  SoftwarePage.h  TavernPage.cpp  TavernPage.h  ThreadPage.cpp  ThreadPage.h  TournamentPage.cpp  TournamentPage.h  (+6 more)
notification-app/: index.html  package.json  vite.config.ts
server/: .env.example  bulk-import-movies.js  check-existing.js  check-movies.js  check-posters.js  check_movies.js  debug-movies.js  dump-db.js  fix-movies-2.js  (+10 more)
(+167 files in other folders)
